# ml-pipeline

./: .gitignore  pyproject.toml
ml_pipeline/: basic_nm_model.py  convolution_2d_ff_nm_model.py  convolution_2d_layer_nm_model.py  data.py  dummy_model.py  layer_nm_model.py  recent_rates.py  util.py
scripts/: obj_func.py  run.py  run_util.py  spec.yaml
tests/: test_basic_nm_model.py  test_convolution_2d_ff_nm_model.py  test_convolution_2d_layer_nm_model.py  test_layer_nm_model.py  test_recent_rates.py  test_util.py
